<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:layout_marginTop="30sp">
        <TextView
            android:id="@+id/ExpensesMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/ll1"
        android:layout_marginStart="55sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="55sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />
    </ScrollView>

    <TableLayout
        android:id="@+id/tl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll1"
        android:layout_marginTop="20sp"
        android:layout_centerInParent="true">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt0"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <Spinner
                android:id="@+id/spin1"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_column="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <AutoCompleteTextView
                android:id="@+id/exp"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="13sp"
                android:hint="@string/name_of_expense"
                android:inputType="text"
                android:completionThreshold="1"
                android:autofillHints="Name of Expense" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/priceExp"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="13sp"
                android:layout_column="1"
                android:hint="@string/price_of_expense"
                android:inputType="numberDecimal"
                android:autofillHints="Price in USD" />
        </TableRow>
        <TableRow
            android:id="@+id/dateRow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/dateExp"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="13sp"
                android:hint="@string/date_of_expense"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:autofillHints="date of purchase" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt7"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbCard"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/radioCard"
                    android:textSize="18sp"
                    android:buttonTint="@color/purple_700"/>
                <RadioButton
                    android:id="@+id/rbCash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioCash"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="18sp"
                    android:buttonTint="@color/purple_700"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/btn1"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/check_mark"
        android:textColor="@color/black"
        android:onClick="onClickAddExpense"/>
    <Button
        android:id="@+id/viewBtn"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1sp"
        android:text="@string/btn2"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/preview"
        android:textColor="@color/black"
        android:onClick="onClickRetrieveExpenses"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/twoButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBtn"
        android:gravity="center">
        <ImageButton
            android:id="@+id/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/calculator_button_description"
            android:drawableEnd="@drawable/calculator"
            android:padding="20sp"
            android:src="@drawable/calculator"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/toggleClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16.5sp"
            android:text="@string/clearTxt"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:onClick="onClearFields"/>
    </LinearLayout>
    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@id/twoButtonLayout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/logout_icon"
        android:onClick="showAlertDialog"/>

</RelativeLayout>