<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditExpense"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:layout_marginTop="60sp">
        <TextView
            android:id="@+id/ExpensesMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EditingExpense"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginTop="60sp"
        android:layout_centerInParent="true">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt0"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <Spinner
                android:id="@+id/spin2"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_column="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <AutoCompleteTextView
                android:id="@+id/exp2"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="13sp"
                android:hint="@string/name_of_expense"
                android:inputType="text"
                android:completionThreshold="1"
                android:autofillHints="Name of Expense" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/priceExp2"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:padding="13sp"
                android:layout_column="1"
                android:hint="@string/price_of_expense"
                android:inputType="numberDecimal"
                android:autofillHints="Price in USD" />
        </TableRow>
        <TableRow
            android:id="@+id/dateRow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/dateExp2"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="13sp"
                android:hint="@string/date_of_expense"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:autofillHints="date of purchase" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="13sp"
                android:text="@string/txt7"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbCard2"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/radioCard"
                    android:textSize="18sp"
                    android:buttonTint="@color/purple_700"/>
                <RadioButton
                    android:id="@+id/rbCash2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioCash"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="18sp"
                    android:buttonTint="@color/purple_700"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/submitUpdateBtn"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60sp"
        android:text="@string/updateExpense"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/check_mark"
        android:textColor="@color/black"
        android:onClick="updateExpense"/>
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitUpdateBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1sp"
        android:text="@string/deleteExpense"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/delete_icon"
        android:textColor="@color/black"
        android:onClick="deleteExpense"/>


</RelativeLayout>