<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="10sp"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/registrationPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLogin"
        android:text="@string/registerHere"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:padding="10sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/expenseImage"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_below="@+id/registrationPage"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/expense_image" />

    <TableLayout
        android:id="@+id/RegisterTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="10sp"
        android:layout_below="@id/expenseImage">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="22sp"
                android:color="@color/black"
                android:layout_column="0"
                android:text="@string/UsernameLogin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical" />
            <EditText
                android:id="@+id/usernameFieldRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:textSize="16sp"
                android:color="@color/black"
                android:layout_column="1"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="22sp"
                android:color="@color/black"
                android:layout_column="0"
                android:text="@string/emailLogin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/emailFieldRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:textSize="16sp"
                android:color="@color/black"
                android:layout_column="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="22sp"
                android:color="@color/black"
                android:layout_column="0"
                android:text="@string/PasswordLogin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/passwordFieldRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:textSize="16sp"
                android:color="@color/black"
                android:layout_column="1"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/loginHereText"
        android:textColor="@color/gray"
        android:layout_below="@id/RegisterTable"
        android:layout_marginTop="10sp"
        android:paddingHorizontal="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:text="@string/alreadyAccount"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginHereText"
        android:gravity="center"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/toggleClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16.5sp"
            android:text="@string/RegisterAccount"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/register_icon"
            android:backgroundTint="@color/white"
            android:onClick="onRegisterScreen" />

    </LinearLayout>

</RelativeLayout>