<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backgroundChange"
    android:background="@drawable/round_corners"
    android:padding="5sp"
    >

    <TableRow
        android:visibility="invisible">
        <TextView
            android:id="@+id/idValue"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="90"
            android:textSize="16sp"
            android:text="ok"
            android:color="@color/black"
            android:layout_column="0"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow>
        <TextView
            android:paddingHorizontal="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="16sp"
            android:paddingStart="15sp"
            android:color="@color/black"
            android:layout_column="0"
            android:text="@string/txt9"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:textSize="16sp"
            android:color="@color/black"
            android:layout_column="1"
            android:text="ok"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <TextView
            android:paddingHorizontal="5sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_weight="10"
            android:paddingStart="15sp"
            android:gravity="start"
            android:color="@color/black"
            android:textSize="16sp"
            android:text="@string/txt1"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/Name1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_weight="90"
            android:color="@color/black"
            android:gravity="start"
            android:text="ok"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <TextView
            android:paddingHorizontal="5sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_weight="10"
            android:paddingStart="15sp"
            android:gravity="start"
            android:color="@color/black"
            android:textSize="16sp"
            android:text="@string/txt5"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:color="@color/black"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_column="1"
            android:text="ok"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <TextView
            android:paddingHorizontal="5sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_weight="10"
            android:paddingStart="15sp"
            android:gravity="start"
            android:color="@color/black"
            android:textSize="16sp"
            android:text="@string/txt3"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/Date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:textSize="16sp"
            android:color="@color/black"
            android:gravity="start"
            android:layout_column="1"
            android:text="ok"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <TextView
            android:paddingHorizontal="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="16sp"
            android:paddingStart="15sp"
            android:color="@color/black"
            android:layout_column="0"
            android:text="@string/txt8"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/Type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:textSize="16sp"
            android:color="@color/black"
            android:layout_column="1"
            android:text="ok"
            android:textColor="@color/black"/>
    </TableRow>

</TableLayout>