<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseView"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/titleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:layout_marginTop="15sp">
        <TextView
            android:id="@+id/titleExpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>

    <ListView
        android:layout_below="@+id/titleTop"
        android:layout_marginTop="5sp"
        android:id="@+id/listViewExp"
        android:layout_width="match_parent"
        android:layout_height="420sp"
        android:divider="@android:color/transparent"
        android:dividerHeight="5sp"
        android:layout_marginHorizontal="20sp"
        >
    </ListView>

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_below="@id/listViewExp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="15sp"
        android:layout_toEndOf="@+id/toggleColor"/>

    <ToggleButton
        android:id="@+id/toggleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listViewExp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="12sp"
        android:textOff="@string/inLBP"
        android:textOn="@string/inUSD"
        android:backgroundTint="@color/white"
        />
    <TableLayout
        android:layout_marginHorizontal="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleColor"
        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView
                android:id="@+id/ShowBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="8sp"
                android:layout_marginTop="12sp"
                android:text="Show date :"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/dateSort"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/date_of_expense"
                android:focusableInTouchMode="false"
                android:autofillHints="date of purchase"
                />
            <Button
                android:id="@+id/ButtonSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11sp"
                android:text="Sort"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:backgroundTint="@color/white"
                android:onClick="populateListDate"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear"
                android:layout_column="3"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:backgroundTint="@color/white"
                android:onClick="defaultList"
                />
        </TableRow>
    </TableLayout>


</RelativeLayout>